# code

./: .fortls.json  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  activate  activate.fish  activate.sh  checkout_branch.sh  clone_all.sh  compose-dev.yaml  requirements.txt  reset.sh  setup.sh  setup_libs.sh  setup_venv.sh  shell.nix
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: main.yml  mirror.yml  setup.yml
images/: README.md  cross_build_push_all.sh  setup_local.sh
images/base/: Dockerfile  README.md  build.sh  cross_build_push.sh  cross_init.sh  push.sh  run.sh  setup_base.sh
images/devcontainer/: Dockerfile  cross_build_push.sh
images/devel/: Dockerfile  build.sh  cross_build_push.sh  push.sh  run.sh  setup_libs.sh  (+1 more)
images/devel-tex/: Dockerfile  build.sh  cross_build_push.sh  cross_init.sh  push.sh  run.sh  setup_fonts.sh  setup_texlive.sh
machines/: init_viper.sh
modules/: .gpec-compile  intel
scripts/: build_push_docker.sh  checkout_branch.sh  clone_all.sh  clone_github.sh  clone_gitlab.sh  cmake_config_file_vmec2000.json  docker_build_push.sh  docker_build_push_all.sh  journal.py  reset.sh  restart_tunnel.sh  setup.sh  setup_arch.sh  setup_base.sh  setup_chease.sh  setup_compiler_intel.sh  setup_compiler_nvidia.sh  setup_debian.sh  setup_fgsl.sh  setup_gpec.sh  setup_gvec.sh  setup_interactive.sh  setup_kilca.sh  setup_lfortran.sh  setup_libneo.sh  setup_libs.sh  setup_local.sh  setup_mac.sh  setup_mars.sh  setup_mdsplus.sh  setup_mephit.sh  setup_mfem.sh  setup_neo2.sh  setup_neort.sh  setup_netcdf.sh  setup_nodejs.sh  setup_nvidia_compiler.sh  setup_octave.sh  setup_omfit.sh  setup_python.sh  (+9 more)
snippets/: f90wrap_example.sh
tests/: conftest.py
tests/libneo/src/: CMakeLists.txt  Makefile  plot_poincare.py
tests/libneo/src/field/: CMakeLists.txt  test_jorek_field_fluxpumping.f90
tests/libneo/src/poincare/: CMakeLists.txt  make_poincare_fluxpumping.f90  test_poincare_fluxpumping.f90
(+145 files in other folders)
